--- a/public/styles/page-landing.css
+++ b/public/styles/page-landing.css
@@ -1,12 +1,20 @@
 header {
-  width: 100vw;
+  width: 100%;
   height: 31.25rem;
   background: linear-gradient(0deg, rgba(46, 46, 46, 0.6), rgba(46, 46, 46, 0.6)), url(../../public/images/pizza-background.jpg) no-repeat center / cover;
 }
 
 h1 {
-  padding: 189px;
+  padding: 11.8125rem;
   text-align: center;
   font-size: 95px;
   color: #FFFFFF;
+}
+
+h2 {
+  font-size: 36px;
+  color: var(--dark-gray);
+  text-align: center;
+  margin-top: 8.75rem;
+  margin-bottom: 3.125rem;
 }
