--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Sora', sans-serif;
 }
 
 :root {
@@ -15,6 +14,25 @@
   --dark-gray: #2E2E2E;
 }
 
+@media(max-width: 1080px) {
+  html {
+      font-size: 93.75%;
+  }
+}
+
+@media(max-width: 720px) {
+  html {
+      font-size: 87.5%;
+  }
+}
+
+body, input, textarea, button {
+  font: 300 1rem 'Sora', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
 
 
 /* Colored letters */
