--- a/public/styles/page-landing.css
+++ b/public/styles/page-landing.css
@@ -7,12 +7,12 @@ header {
 h1 {
   padding: 11.8125rem;
   text-align: center;
-  font-size: 95px;
+  font-size: 5.9375rem;
   color: #FFFFFF;
 }
 
 h2 {
-  font-size: 36px;
+  font-size: 2.25rem;
   color: var(--dark-gray);
   text-align: center;
   margin-top: 8.75rem;
