--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -14,6 +14,22 @@
   --dark-gray: #2E2E2E;
 }
 
+
+body, input, textarea, button {
+  font: 300 1rem 'Sora', sans-serif;
+}
+
+button {
+  background: #FFA200;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+}
+
+html, body {
+  height: 100vh;
+}
+
 @media(max-width: 1080px) {
   html {
       font-size: 93.75%;
@@ -25,15 +41,6 @@
       font-size: 87.5%;
   }
 }
-
-body, input, textarea, button {
-  font: 300 1rem 'Sora', sans-serif;
-}
-
-button {
-  cursor: pointer;
-}
-
 
 /* Colored letters */
 
