--- a/public/styles/page-landing.css
+++ b/public/styles/page-landing.css
@@ -1,14 +1,19 @@
 header {
   width: 100%;
   height: 31.25rem;
-  background: linear-gradient(0deg, rgba(46, 46, 46, 0.6), rgba(46, 46, 46, 0.6)), url(../../public/images/pizza-background.jpg) no-repeat center / cover;
+  background: linear-gradient(
+      0deg,
+      rgba(46, 46, 46, 0.6),
+      rgba(46, 46, 46, 0.6)
+    ),
+    url(../../public/images/pizza-background.jpg) no-repeat center / cover;
 }
 
 h1 {
   padding: 11.8125rem;
   text-align: center;
   font-size: 5.9375rem;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 h2 {
